--- a/style.css
+++ b/style.css
@@ -1,68 +1,108 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,800);
-
 body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Raleway', Arial, sans-serif;
+ margin: 0;
+ height: 100vh;
+ background-color: #333;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-li {
-  list-style: none;
-}
-
-a {
+.container {
   position: relative;
-  display: block;
-  margin: 0 10px;
-  padding: 5px 10px;
-  color: #333;
-  font-size: 30px;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: 0.5s;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
-a:before {
-  content: "";
+.text {
   position: absolute;
-  width: 100%;
-  height: 4px;
   top: 50%;
-  transform: translateY(-50%);
-  left: -100%;
-  background-color: #d63031;
-  transition: 0.5s;
-}
-
-a:hover:before {
-  animation: line 0.5s linear forwards;
-}
-
-@keyframes line {
-  0% {
-    left: -100%;
-    height: 4px;
-  }
-  50% {
-    left: 0;
-    height: 4px;
-  }
-   100% {
-    left: 0;
-    height: 100%;
-    z-index: -1;
-  }
-}
-
-a:hover {
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
+  text-transform: uppercase;
+  font-size: 45px;
+  border-top: 5px solid white;
+  border-bottom: 5px solid white;
+}
+
+.square{
+  position: absolute;
+  bottom: -100px;
+  background-color: #f2f2f2;
+  animation: boxes 10s infinite ease-in-out;
+}
+
+.square:nth-child(1) {
+  width: 75px;
+  height: 75px;
+  left: 7%;
+}
+
+.square:nth-child(2) {
+  width: 65px;
+  height: 65px;
+  left: 15%;
+  animation-delay: 4s;
+}
+
+.square:nth-child(3) {
+  width: 82px;
+  height: 82px;
+  left: 45%;
+  animation-delay: 8s;
+}
+
+.square:nth-child(4) {
+  width: 70px;
+  height: 70px;
+  left: 55%;
+  animation-delay: 2s;
+}
+
+.square:nth-child(5) {
+  width: 60px;
+  height: 60px;
+  left: 27%;
+  animation-delay: 6s;
+}
+
+.square:nth-child(6) {
+  width: 55px;
+  height: 55px;
+  left: 60%;
+  animation-delay: 4s;
+}
+
+.square:nth-child(7) {
+  width: 90px;
+  height: 90px;
+  left: 85%;
+  animation-delay: 9s;
+}
+
+.square:nth-child(8) {
+  width: 70px;
+  height: 70px;
+  left: 75%;
+  animation-delay: 4s;
+}
+
+.square:nth-child(9) {
+  width: 45px;
+  height: 45px;
+  left: 10%;
+  animation-delay: 7s;
+}
+
+.square:nth-child(10) {
+  width: 55px;
+  height: 55px;
+  left: 60%;
+  animation-delay: 7s;
+}
+
+@keyframes boxes {
+  0% { bottom: -100px }
+
+  100% { bottom: 100%;
+  transform: rotate(180deg);
+  opacity: 0; }
 }
